[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-mistune"
description = "Render Markdown in Django templates using the Mistune package."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["django", "template", "filter", "markdown", "commonmark"]
authors = [
  { name = "LeMinaw", email = "leminaw@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.2",
  "Framework :: Django :: 6",
]
dependencies = [
  "defusedxml~=0.7",
  "django>=4.2",
  "mistune~=2.0",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "pytest-django",
]

[project.urls]
Documentation = "https://github.com/leminaw/django-mistune#readme"
Issues = "https://github.com/leminaw/django-mistune/issues"
Source = "https://github.com/leminaw/django-mistune"

[tool.hatch.version]
path = "django_mistune/__about__.py"

# Hatch test env

[tool.hatch.envs.test]
features = ["test"]
installer = "uv"

[tool.hatch.envs.test.env-vars]
DJANGO_SETTINGS_MODULE = "tests.settings"

[tool.hatch.envs.test.scripts]
cov = "pytest --cov-report=term-missing --cov-report=xml --cov-config=pyproject.toml --cov=django_mistune"
test = "pytest --no-cov"

# Hatch matrix test env

[tool.hatch.envs.full]
template = "test"
matrix-name-format = "{variable}{value}"

[[tool.hatch.envs.full.matrix]]
dj = ["4.2", "5.2"]
python = ["3.10", "3.11", "3.12", "3.13", "3.14"]

[[tool.hatch.envs.full.matrix]]
dj = ["6.0"]
python = ["3.12", "3.13", "3.14"]

[tool.hatch.envs.full.overrides]
matrix.dj.dependencies = [
  { value = "django~=4.2.0", if = ["4.2"] },
  { value = "django~=5.2.0", if = ["5.2"] },
  { value = "django~=6.0.0", if = ["6.0"] },
  { value = "django @ git+https://github.com/django/django.git", if = ["main"] }
]

# Formatters 

[tool.ruff]
line-length = 80

# Coverage

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "django_mistune/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
